# qa-bot-with-rag

./: .gitignore  LICENSE  README.md  pyproject.toml  qabot.py  rag_functions.py  test_rag_notebook.ipynb
